--- a/config/locales/views/merchants/en.yml
+++ b/config/locales/views/merchants/en.yml
@@ -6,6 +6,7 @@ en:
       success: New merchant created successfully
     destroy:
       success: Merchant deleted successfully
+      unlinked_success: Merchant removed from your transactions
     edit:
       title: Edit merchant
     form:
@@ -13,12 +14,14 @@ en:
     index:
       empty: No merchants yet
       new: New merchant
+      merge: Merge merchants
       title: Merchants
       family_title: Family merchants
       family_empty: No family merchants yet
       provider_title: Provider merchants
       provider_empty: No provider merchants linked to this family yet
       provider_read_only: Provider merchants are synced from your connected institutions. They cannot be edited here.
+      provider_info: These merchants were automatically detected by your bank connections or AI. You can edit them to create your own copy, or remove them to unlink from your transactions.
       table:
         merchant: Merchant
         actions: Actions
@@ -30,7 +33,24 @@ en:
       confirm_title: Delete merchant?
       delete: Delete merchant
       edit: Edit merchant
+    merge:
+      title: Merge merchants
+      description: Select a target merchant and the merchants to merge into it. All transactions from merged merchants will be reassigned to the target.
+      target_label: Merge into (target)
+      select_target: Select target merchant...
+      sources_label: Merchants to merge
+      sources_hint: Selected merchants will be merged into the target. Family merchants will be deleted, provider merchants will be unlinked.
+      submit: Merge selected
     new:
       title: New merchant
+    perform_merge:
+      success: Successfully merged %{count} merchants
+      no_merchants_selected: No merchants selected to merge
+    provider_merchant:
+      edit: Edit
+      remove: Remove
+      remove_confirm_title: Remove merchant?
+      remove_confirm_body: Are you sure you want to remove %{name}? This will unlink all associated transactions from this merchant but will not delete the merchant itself.
     update:
       success: Merchant updated successfully
+      converted_success: Merchant converted and updated successfully
