FIX do security check

--- a/config/locales/views/merchants/en.yml
+++ b/config/locales/views/merchants/en.yml
@@ -48,6 +48,8 @@ en:
     perform_merge:
       success: Successfully merged %{count} merchants
       no_merchants_selected: No merchants selected to merge
+      target_not_found: Target merchant not found
+      invalid_merchants: Invalid merchants selected
     provider_merchant:
       edit: Edit
       remove: Remove
