--- a/config/locales/views/settings/pt-BR.yml
+++ b/config/locales/views/settings/pt-BR.yml
@@ -91,6 +91,7 @@ pt-BR:
       feedback_label: Feedback
       general_section_title: Geral
       imports_label: Importações
+      exports_label: Exportações
       logout: Sair
       merchants_label: Comerciantes
       other_section_title: Mais
