--- a/config/locales/views/settings/zh-CN.yml
+++ b/config/locales/views/settings/zh-CN.yml
@@ -101,7 +101,8 @@ zh-CN:
       feedback_label: 意见反馈
       general_section_title: 通用设置
       guides_label: 使用指南
-      imports_label: 导入/导出
+      imports_label: 导入记录
+      exports_label: 导出记录
       logout: 退出登录
       merchants_label: 商户管理
       other_section_title: 更多设置
