--- a/config/locales/views/imports/zh-CN.yml
+++ b/config/locales/views/imports/zh-CN.yml
@@ -66,12 +66,8 @@ zh-CN:
       uploading: 处理行数据中
       view: 查看
     index:
-      exports: 导出记录
-      imports: 导入记录
+      title: 导入记录
       new: 新建导入
-      new_export: 新建导出
-      no_exports: 暂无导出记录
-      title: 导入/导出管理
     new:
       description: 您可以通过 CSV 手动导入多种类型数据，或使用我们的导入模板（如 Mint 格式）。
       import_accounts: 导入账户
