--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -30,6 +30,7 @@ en:
         balances, and cannot be undone.
       delete_title: Delete transaction
       details: Details
+      installment_payment: Installment payment
       mark_recurring: Mark as Recurring
       mark_recurring_subtitle: Track this as a recurring transaction. Amount variance is automatically calculated from past 6 months of similar transactions.
       mark_recurring_title: Recurring Transaction
