--- a/config/locales/views/sophtron_items/en.yml
+++ b/config/locales/views/sophtron_items/en.yml
@@ -28,11 +28,11 @@ en:
       user_id:
         label: "Sophtron User ID:"
         placeholder: "Paste your Sophtron User ID here..."
-        help_text: "The user id should be a long string starting with letters and numbers"
+        help_text: "The User ID should be a long string starting with letters and numbers"
       access_key:
         label: "Sophtron Access Key:"
         placeholder: "Paste your Sophtron Access Key here..."
-        help_text: "The access key should be a long string starting with letters and numbers"
+        help_text: "The Access Key should be a long string starting with letters and numbers"
     index:
       title: Sophtron Connections
     loading:
@@ -79,7 +79,7 @@ en:
       link_accounts: Link selected accounts
       no_accounts_found: No accounts found. Please check your API key configuration.
       no_access_key: Sophtron Access key is not configured. Please configure it in Settings.
-      no_api_key: Sophtron API key is not configured. Please configure it in Settings.
+      no_user_id: Sophtron User ID is not configured. Please configure it in Settings.
       no_name_placeholder: "(No name)"
       title: Select Sophtron Accounts
     select_existing_account:
@@ -93,7 +93,7 @@ en:
       no_account_specified: No account specified
       no_accounts_found: No Sophtron accounts found. Please check your API key configuration.
       no_access_key: Sophtron Access key is not configured. Please configure it in Settings.
-      no_api_key: Sophtron API key is not configured. Please configure it in Settings.
+      no_user_id: Sophtron User ID is not configured. Please configure it in Settings.
       no_name_placeholder: "(No name)"
       title: "Link %{account_name} with Sophtron"
     link_existing_account:
@@ -113,7 +113,7 @@ en:
       fetch_failed: "Failed to Fetch Accounts"
       no_accounts_to_setup: "No Accounts to Set Up"
       no_access_key: "Sophtron Access key is not configured. Please check your connection settings."
-      no_api_key: "Sophtron API key is not configured. Please check your connection settings."
+      no_user_id: "Sophtron User ID is not configured. Please check your connection settings."
       account_types:
         skip: Skip this account
         depository: Checking or Savings Account
@@ -173,7 +173,7 @@ en:
       success: "Successfully created %{count} account(s)."
     sync:
       success: Sync started
-    sophtron_Setup_Required:
+    sophtron_setup_required:
       title: Sophtron Setup Required
       message: >
         To complete the setup of your Sophtron connection, please go to the Provider Settings page and follow the instructions to authorize and configure your Sophtron connection.
