Improve cost basis validation and error handling in holdings controller
- Allow zero as a valid cost basis for gifted/inherited shares.
- Add error handling with user feedback for invalid cost basis values.

--- a/config/locales/views/holdings/en.yml
+++ b/config/locales/views/holdings/en.yml
@@ -7,6 +7,7 @@ en:
       success: Holding deleted
     update:
       success: Cost basis saved.
+      error: Invalid cost basis value.
     unlock_cost_basis:
       success: Cost basis unlocked. It may be updated on next sync.
     cost_basis_sources:
