--- a/config/locales/views/family_exports/de.yml
+++ b/config/locales/views/family_exports/de.yml
@@ -1,6 +1,9 @@
 ---
 de:
   family_exports:
+    delete_confirmation: Möchten Sie diesen Export wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.
+    delete_failed_confirmation: Möchten Sie diesen fehlgeschlagenen Export wirklich löschen?
+    exporting: Wird exportiert...
     index:
       title: Exporte
       new: Neuer Export
