--- a/config/locales/views/family_exports/es.yml
+++ b/config/locales/views/family_exports/es.yml
@@ -9,6 +9,7 @@ es:
       new: Nueva exportación
       no_exports: Aún no hay exportaciones.
     list:
+      export_from: "Exportación del %{date}"
       in_progress: En progreso
       complete: Completo
       failed: Fallido
