--- a/config/locales/views/family_exports/nb.yml
+++ b/config/locales/views/family_exports/nb.yml
@@ -9,6 +9,7 @@ nb:
       new: Ny Eksport
       no_exports: Ingen eksporter ennå.
     list:
+      export_from: "Eksport fra %{date}"
       in_progress: Pågår
       complete: Fullført
       failed: Mislykket
