fix(settings): fix coderabbit review

--- a/config/locales/views/family_exports/nb.yml
+++ b/config/locales/views/family_exports/nb.yml
@@ -1,8 +1,14 @@
 ---
 nb:
   family_exports:
+    access_denied: Tilgang nektet
+    create:
+      success: Eksport startet. Du vil kunne laste den ned snart.
     delete_confirmation: Er du sikker på at du vil slette denne eksporten? Denne handlingen kan ikke angres.
     delete_failed_confirmation: Er du sikker på at du vil slette denne mislykkede eksporten?
+    destroy:
+      success: Eksport slettet
+    export_not_ready: Eksport ikke klar for nedlasting
     exporting: Eksporterer...
     index:
       title: Eksporter
