--- a/config/locales/views/family_exports/pt-BR.yml
+++ b/config/locales/views/family_exports/pt-BR.yml
@@ -1,8 +1,14 @@
 ---
 pt-BR:
   family_exports:
+    access_denied: Acesso negado
+    create:
+      success: Exportação iniciada. Você poderá baixá-la em breve.
     delete_confirmation: Tem certeza de que deseja excluir esta exportação? Esta ação não pode ser desfeita.
     delete_failed_confirmation: Tem certeza de que deseja excluir esta exportação falhada?
+    destroy:
+      success: Exportação excluída com sucesso
+    export_not_ready: Exportação não está pronta para download
     exporting: Exportando...
     index:
       title: Exportações
@@ -10,6 +16,6 @@ pt-BR:
       no_exports: Nenhuma exportação ainda.
     list:
       export_from: "Exportação de %{date}"
-      in_progress: Em andamento 
+      in_progress: Em andamento
       complete: Concluído
       failed: Falhou
