--- a/config/locales/views/family_exports/ca.yml
+++ b/config/locales/views/family_exports/ca.yml
@@ -1,8 +1,14 @@
 ---
 ca:
   family_exports:
+    access_denied: Accés denegat
+    create:
+      success: Exportació iniciada. Podràs descarregar-la aviat.
     delete_confirmation: Estàs segur que vols eliminar aquesta exportació? Aquesta acció no es pot desfer.
     delete_failed_confirmation: Estàs segur que vols eliminar aquesta exportació fallida?
+    destroy:
+      success: Exportació eliminada amb èxit
+    export_not_ready: L'exportació no està llesta per descarregar
     exporting: Exportant...
     index:
       title: Exportacions
