--- a/config/locales/views/family_exports/de.yml
+++ b/config/locales/views/family_exports/de.yml
@@ -1,8 +1,14 @@
 ---
 de:
   family_exports:
+    access_denied: Zugriff verweigert
+    create:
+      success: Export gestartet. Sie können ihn in Kürze herunterladen.
     delete_confirmation: Möchten Sie diesen Export wirklich löschen? Diese Aktion kann nicht rückgängig gemacht werden.
     delete_failed_confirmation: Möchten Sie diesen fehlgeschlagenen Export wirklich löschen?
+    destroy:
+      success: Export erfolgreich gelöscht
+    export_not_ready: Export noch nicht zum Download bereit
     exporting: Wird exportiert...
     index:
       title: Exporte
