--- a/config/locales/views/family_exports/en.yml
+++ b/config/locales/views/family_exports/en.yml
@@ -1,8 +1,14 @@
 ---
 en:
   family_exports:
+    access_denied: Access denied
+    create:
+      success: Export started. You'll be able to download it shortly.
     delete_confirmation: Are you sure you want to delete this export? This action cannot be undone.
     delete_failed_confirmation: Are you sure you want to delete this failed export?
+    destroy:
+      success: Export deleted successfully
+    export_not_ready: Export not ready for download
     exporting: Exporting...
     index:
       title: Exports
