--- a/config/locales/views/family_exports/es.yml
+++ b/config/locales/views/family_exports/es.yml
@@ -1,8 +1,14 @@
 ---
 es:
   family_exports:
+    access_denied: Acceso denegado
+    create:
+      success: Exportación iniciada. Podrás descargarla en breve.
     delete_confirmation: ¿Estás seguro de que quieres eliminar esta exportación? Esta acción no se puede deshacer.
     delete_failed_confirmation: ¿Estás seguro de que quieres eliminar esta exportación fallida?
+    destroy:
+      success: Exportación eliminada con éxito
+    export_not_ready: La exportación no está lista para descargar
     exporting: Exportando...
     index:
       title: Exportaciones
