--- a/config/locales/views/family_exports/ro.yml
+++ b/config/locales/views/family_exports/ro.yml
@@ -1,8 +1,14 @@
 ---
 ro:
   family_exports:
+    access_denied: Acces interzis
+    create:
+      success: Export început. Veți putea să-l descărcați în curând.
     delete_confirmation: Sigur doriți să ștergeți acest export? Această acțiune nu poate fi anulată.
     delete_failed_confirmation: Sigur doriți să ștergeți acest export eșuat?
+    destroy:
+      success: Export șters cu succes
+    export_not_ready: Exportul nu este gata pentru descărcare
     exporting: Se exportă...
     index:
       title: Exporturi
