--- a/config/locales/views/family_exports/zh-CN.yml
+++ b/config/locales/views/family_exports/zh-CN.yml
@@ -1,8 +1,14 @@
 ---
 zh-CN:
   family_exports:
+    access_denied: 访问被拒绝
+    create:
+      success: 导出已开始。您很快就能下载它。
     delete_confirmation: 确定要删除此导出吗？此操作无法撤销。
     delete_failed_confirmation: 确定要删除此失败的导出吗？
+    destroy:
+      success: 导出已成功删除
+    export_not_ready: 导出尚未准备好下载
     exporting: 正在导出...
     index:
       title: 导出
